PadoGrid
========

Release: Version 0.9.2-SNAPSHOT
Release Date: 05/23/20

- Added support for SnappyData/ComputeDB.
- Added support for Gitea. You can now create catalogs in private Gitea repos
- Added Minishift support for Hazelcast.
- Added OpenShift support for Hazelcast.
- Added Jet 4.x support for the jet_demo app.

*************************************************************************

Release: Version 0.9.1
Release Date: 04/20/20

- Initial consolidated release.
- Most of the merged features have been tested and fully operational.
- In need of additional clean up in the are of docs, VMs, and common commands.
- This version serves as the base version for supporting additional products other than Geode/GemFire and Hazelcast/Jet.

*************************************************************************