@@ -38,8 +38,7 @@ WORKSPACE
    $PADOGRID_WORKSPACE
 
 NAME
-   $EXECUTABLE - Display the status of the specified cluster in the current
-                 padogrid workspace
+   $EXECUTABLE - Display the status of the specified cluster in the current padogrid workspace
 
 SYNOPSIS
    $EXECUTABLE [-cluster cluster_name] [-long] [-all] [-?]
@@ -150,8 +149,7 @@ function displayVmClusterLong()
    MEMBER_START_PORT=`getClusterProperty "tcp.startPort" $DEFAULT_MEMBER_START_PORT`
    MEMBER_HTTP_ENABLED=`getClusterProperty "http.enabled" $DEFAULT_MEMBER_HTTP_ENABLED`
    MEMBER_HTTP_START_PORT=`getClusterProperty "http.startPort" $DEFAULT_MEMBER_HTTP_START_PORT`
-   JMX_MANAGER_HTTP_START_PORT=`getClusterProperty "locator.jmx.manager.http.startPort" $DEFAULT_JMX_MANAGER_HTTP_START_PORT`
-   JMX_MANAGER_START_PORT=`getClusterProperty "locator.jmx.manager.startPort" $DEFAULT_JMX_MANAGER_START_PORT`
+   SPARK_UI_PORT=`getClusterProperty "spark.ui.port" $DEFAULT_SPARK_UI_PORT`
    DEBUG_START_PORT=`getClusterProperty "debug.startPort" $DEFAULT_DEBUG_START_PORT`
    JMX_ENABLED=`getClusterProperty "jmx.enabled" $DEFAULT_JMX_ENABLED`
    JMX_START_PORT=`getClusterProperty "jmx.startPort" $DEFAULT_JMX_START_PORT`
@@ -213,10 +211,8 @@ function displayVmClusterLong()
       if [ "$PROMETHEUS_ENABLED" == "true" ]; then
          PROMETHEUS_PORT=$PROMETHEUS_START_PORT
       fi
-      JMX_MANAGER_HTTP_PORT=$JMX_MANAGER_HTTP_START_PORT
-      JMX_MANAGER_PORT=$JMX_MANAGER_START_PORT
 
-      PULSE_URL="http://${LOCATOR_HOSTNAME_FOR_CLIENTS}:$JMX_MANAGER_HTTP_PORT/pulse"
+      PULSE_URL="http://${LOCATOR_HOSTNAME_FOR_CLIENTS}:$SPARK_UI_PORT/pulse"
 
       LOG_FILE=$LOG_DIR/${LOCATOR}.log
       
@@ -413,8 +409,7 @@ function displayClusterLong()
    MEMBER_START_PORT=`getClusterProperty "tcp.startRPort" $DEFAULT_MEMBER_START_PORT`
    MEMBER_HTTP_ENABLED=`getClusterProperty "http.enabled" $DEFAULT_MEMBER_HTTP_ENABLED`
    MEMBER_HTTP_START_PORT=`getClusterProperty "http.startRPort" $DEFAULT_MEMBER_HTTP_START_PORT`
-   JMX_MANAGER_HTTP_START_PORT=`getClusterProperty "locator.jmx.manager.http.startPort" $DEFAULT_JMX_MANAGER_HTTP_START_PORT`
-   JMX_MANAGER_START_PORT=`getClusterProperty "locator.jmx.manager.startPort" $DEFAULT_JMX_MANAGER_START_PORT`
+   SPARK_UI_PORT=`getClusterProperty "spark.ui.port" $DEFAULT_SPARK_UI_PORT`
    LOCATOR_DEBUG_ENABLED=`getClusterProperty "locator.debug.enabled" $DEFAULT_LOCATOR_DEBUG_ENABLED`
    LOCATOR_DEBUG_START_PORT=`getClusterProperty "locator.debug.startPort" $DEFAULT_LOCATOR_DEBUG_START_PORT`
    LEADER_DEBUG_ENABLED=`getClusterProperty "leader.debug.enabled" $DEFAULT_LEADER_DEBUG_ENABLED`
@@ -501,8 +496,6 @@ function displayClusterLong()
             else
                DEBUG_PORT="disabled"
 	    fi
-            JMX_MANAGER_HTTP_PORT=$JMX_MANAGER_HTTP_START_PORT
-            JMX_MANAGER_PORT=$JMX_MANAGER_START_PORT
             if [ "$LOCATOR_JMX_ENABLED" == "true" ]; then
                JMX_PORT=$LOCATOR_JMX_START_PORT
                JMX_URL="service:jmx:rmi:///jndi/rmi://${NODE}:$JMX_PORT/jmxrmi"
@@ -538,10 +531,6 @@ function displayClusterLong()
                PROMETHEUS_PORT="disabled"
             fi
             
-            # JMX Manager (Pulse) is always enabled
-            let JMX_MANAGER_HTTP_PORT=JMX_MANAGER_HTTP_START_PORT+LOCATOR_NUM_NO_LEADING_ZERO-1
-            let JMX_MANAGER_PORT=JMX_MANAGER_START_PORT+LOCATOR_NUM_NO_LEADING_ZERO-1
-
          fi
 
 #         if [ "$POD" == "local" ]; then
@@ -553,7 +542,7 @@ function displayClusterLong()
 #            LOCATOR_HOSTNAME_FOR_CLIENTS=$NODE_LOCAL
 #         fi
 
-         PULSE_URL="http://$LOCATOR_HOSTNAME_FOR_CLIENTS:$JMX_MANAGER_HTTP_PORT/pulse"
+         PULSE_URL="http://$LOCATOR_HOSTNAME_FOR_CLIENTS:$SPARK_UI_PORT/pulse"
 
          LOG_FILE=$LOG_DIR/${LOCATOR}.log
          echo "$LOCATOR_NUM       Locator: $LOCATOR"
