@@ -2,9 +2,10 @@ PadoGrid
 ========
 
 Release: Version 0.9.2-SNAPSHOT
-Release Date: 05/23/20
+Release Date: 05/31/20
 
-- Added support for SnappyData/ComputeDB.
+- Added cluster support for SnappyData/ComputeDB.
+- Added cluster support for Coherence.
 - Added support for Gitea. You can now create catalogs in private Gitea repos
 - Added Minishift support for Hazelcast.
 - Added OpenShift support for Hazelcast.
